# readytorender

./: .gitmodules  CMakeLists.txt  README.md  gitversion.cmake  gitversion.h.in  readytorender-config.cmake
.github/workflows/: build_and_test.yml
include/rtr/: header.hpp  ktx.hpp  material.hpp  mesh.hpp  scene.hpp  types.hpp  write_mesh.hpp
test/: CMakeLists.txt
test/src/: creator.hpp  test_header.cpp  test_mesh.cpp
